--- a/Lelo's Files/style.css
+++ b/Lelo's Files/style.css
@@ -1,26 +1,36 @@
 body{
-    width: 100%;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(158, 155, 161);
-}
-.file-name {
-            position: relative;
-            
-}
-.file-text h1,h2{
-    position: absolute;
-    top: 0;
-}
-h1{
-    transform: rotate(335deg);
-}
-.file-text h2{
+    /*width: 100%;
     
+    display: flex;
+    /*justify-content: center;
+    align-items: center;
+    background-color: rgb(158, 155, 161);*/
 }
+
+h1{
+    z-index: 2;
+    position: absolute;
+    top: 250px;
+    left: 600px;
+    transform: rotate(330deg);
+    font-size: 50px;
+}
+/*h2{
+    z-index: 2;
+    position: absolute;
+    top: 430px;
+    left: 650px;
+  
+}*/
 img{
-     transform: rotate(335deg);
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    /*top: 200px;
+    left:550px;
+     transform: rotate(335deg);*/
 }
